2016-09-12  Masaya Uno  <masaya@FS-MC-pca308>

	* app/controllers/ApiController.java:
	(show): 指定IDのItemを取得する
	(createItem): 新規Itemを作成(既存Itemの上書きはしない)
	(deleteItem): ID指定されたItemを削除
	(updateItem): Itemの情報を変更(新規Itemは作成しない、Item.idは変更できない)
	(deleteItem): 存在しないItemIDへの削除要求についてエラー対策
	(createItem, init): Item.idは自動設定させる
	(createItem): responceを作成されたItemのJsonではなく、Created(LOCATION)で返す
	レスポンスを整理

	* app/models/Item.java (fromJson):
	JSONデータを読み込んでItemインスタンスを返す

	* conf/application.conf: Evolutions自動実行を有効に(Heroku動作用)

2016-09-11  Masaya Uno  <masaya@FS-MC-pca308>

	* Procfile: 作成(Heroku動作用)

	* app/controllers/ApiController.java:
	(init): 初期ダミーデータを登録 (とりあえず画像は扱わない)
	(showAll): 全itemを取得して、jsonで返す

	* app/models/Item.java (toString): Json.toJson() で間に合うので削除

	* app/models/Item.java: 作成
